--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@tensorflow-models/body-pix": "^2.0.5",
+    "@tensorflow-models/posenet": "^2.2.1",
     "@tensorflow/tfjs-converter": "^1.3.1",
     "@tensorflow/tfjs-core": "^1.3.1",
     "@testing-library/jest-dom": "^4.2.4",
